Fix color bar painting failures in statistics main window

Summary:
Some color bars of the bar chart in LessonStatisticsView are not drawn
to its full length. The reason are rounding errors in bar segment length
calculation. To fix this, all integer values were replaced by floating
point variables.

Furthermore sometimes the border line between two bar segments was not
drawn when constructed with QPainterPath. The relevant QPainterPath
operation were replaced by direct drawing operations to the QPainter
object.

BUG: 389998

Reviewers: #kde_edu, tcanabrava

Reviewed By: #kde_edu, tcanabrava

Subscribers: kde-edu, tcanabrava

Tags: #kde_edu

Differential Revision: https://phabricator.kde.org/D10367